Lazy load images to prevent jumpy pages (#178)
* feat: use native lazy loading

* Revert "feat: use native lazy loading"

This reverts commit e79227e25b35af00a7f202616397315371fc9fee.

* checkpoint: lazy load images

* checkpint using placeholder

* checkpoint: good enough

* chore: clean up

* chore: remove unused dependency

* use loading animation as placeholder

* fix: loader animation

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -751,6 +751,7 @@ a.lottie#learn-more {
 
   img {
     max-width: 100%;
+    object-fit: contain;
   }
 
   code {
